# follow-the-light

./: .gitignore  make.sh  pyproject.toml  readme.md  requirements.txt
assets/: gen_atlas.py  new-atlas.sh
shaders/: fog_fragment.glsl  fog_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
src/: __main__.py  atlas.py  camera.py  colors.py  components.py  esper.py  main.py  paths.py  pygame_main.py  shaders.py  shapes.py
src/data/: atlas.py  paths.py
src/graphism/: __init__.py  atlas.py  shaders.py
src/locals/: constants.py  paths.py
src/logic/: __init__.py  components.py  constants.py
src/logic/state_machine/: __init__.py  base.py  movement_machine.py
src/logic/systems/: __init__.py  buffs_system.py  collision_system.py  facing_system.py  input_system.py  state_machine_system.py  update_position_system.py
src/render/: __init__.py  base_window.py  components.py  constants.py  shaders.py
src/render/systems/: __init__.py  animation_system.py  draw_sprites_system.py  flip_sprite_system.py  fog_system.py  move_camera_system.py  parallax_system.py  select_animation_system.py
src/systems/: __init__.py  animation_system.py  buffs_system.py  collision_system.py  draw_sprites_system.py  fog_system.py  input_system.py  move_camera_system.py  parallax_system.py  player_horizontal_move_system.py  player_move_system.py  state_machine_system.py  update_position_system.py
src/systems/render/: __init__.py  animation_system.py  fog_system.py  (+3 more)
src/ui/: __init__.py  base_window.py  inputs.py  pygame_main.py
(+5 files in other folders)
