[tool.poetry]
name = "follow-the-light"
version = "0.1.0"
description = "A platformer where I test ideas"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
moderngl = "^5.6.0"
pygame = "2.0.0.dev6"
numpy = "^1.18.0"
click = "^7.0.0"
pygame-input = "^1.0.0"

[tool.poetry.dev-dependencies]
scipy = "^1.4.0"
rectpack = "^0.2.1"
pillow = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
